<resources>
    <string name="app_name"> مؤسًسًة مطٌوِفُى حًجَٱجَ جَنٌوِبّ آسًيّٱ</string>
    <string name="login_key">Login key</string>
    <string name="user_id">User ID</string>
    <string name="user_task_category">User Category</string>
    <string name="search_selected">Search selected</string>
    <string name="login">تسجيل الدخول</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="search">حالة المهمة</string>
    <string name="user_type">1</string>
    <string name="accept_or_reject_task">قبول او رفض المهمة</string>
    <string name="reject">رفض</string>
    <string name="accept">قبول</string>
    <string name="RejectReason">سبب الرفض</string>
    <string name="task_state">حالة المهمه</string>
    <string name="state_description">وصف الحالة</string>
    <string name="opinion">استطلاع رأى</string>
    <string name="open_file">فتح ملف</string>
    <string name="allow">السماح بالاطلاع عليها</string>
    <string name="save">حفظ</string>
    <string name="achieve">انجاز</string>
    <string name="task_choice">المهمة</string>
    <string name="category">الفئة</string>
    <string name="task_description">وصف المهمة</string>
    <string name="task_order">المطلوب من المهمة</string>
    <string name="task_priority">اولوية المهمة</string>
    <string name="start_date">تاريخ البداية</string>
    <string name="end_date">تاريخ النهاية</string>
    <string name="check1">المهمة تتبع مهمة رئيسية</string>
    <string name="check2">المهمة معتمدة على معاملة سابقة</string>
    <string name="followed_module">الموديول التابع له</string>
    <string name="handling">المعاملة</string>
    <string name="responsible_person">الشخص المسؤل عن المهمة</string>
    <string name="notes">ملاحظات</string>
    <string name="guideName">إسم المرشد</string>
    <string name="guidePhone">رقم الجوال للمرشد</string>
    <string name="houseNo">رقم المسكن</string>
    <string name="pilgrimsNo">عدد الحجاج</string>
    <string name="arrivedTime">وقت الوصول</string>
    <string name="taskChoice">إختيار المهمة</string>
    <string name="action">الاجراء</string>
    <string name="action_time">وقت الاجراء</string>
    <string name="by">بواسطة</string>
    <string name="attachments">المرفقات</string>
    <string name="choose_attachment">اختر المرفقات</string>
    <string name="discard">إلغاء</string>
    <string name="done">منتهى</string>
    <string name="taskNo">رقم المهمه</string>
    <string name="taskName">اسم المهمه</string>
    <string name="taskRequ">المطلوب من المهمة</string>
    <string name="taskCategory">فئة المهمة</string>
    <string name="reject_cause">سبب رفض هذه المهمة</string>


</resources>
