<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NewTaskDetails"
    android:background="@drawable/second_bac">

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/noTaskLin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/notask"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="لا يوجد مهام متاحة الان "
            android:textSize="20dp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"/>

    </LinearLayout>-->
    <include android:layout_width="match_parent"
        android:layout_height="60dp"
        layout="@layout/my_action_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barLin">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
           >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layoutDirection="rtl"
        android:id="@+id/lin1">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taskNo"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginEnd="40dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/tasks_heads_background"
            android:id="@+id/taskNo"
            android:layout_gravity="center"
            android:textColor="#B99930"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/lin2"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin1"
        android:layout_marginTop="20dp"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:background="@drawable/tasks_heads_background"
            android:id="@+id/taskName"
            android:layout_gravity="center"
            android:textColor="#B99930"
            android:gravity="center"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/taskName"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/lin3"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin2"
        android:layout_marginTop="20dp"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:background="@drawable/tasks_heads_background"
            android:id="@+id/taskprio"
            android:layout_gravity="center"
            android:textColor="#B99930"
            android:gravity="center"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/task_priority"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/lin4"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin3"
        android:layout_marginTop="20dp"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:background="@drawable/tasks_heads_background"
            android:id="@+id/taskState"
            android:layout_gravity="center"
            android:textColor="#B99930"
            android:gravity="center"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/task_state"
            android:textColor="@android:color/black" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/lin5"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin4"
        android:layout_marginTop="20dp"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:background="@drawable/tasks_heads_background"
            android:id="@+id/task_req"
            android:layout_gravity="center"
            android:textColor="#B99930"
            android:gravity="center"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/taskRequ"
            android:textColor="@android:color/black"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/lin6"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin5"
        android:layout_marginTop="20dp"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:background="@drawable/tasks_heads_background"
            android:id="@+id/task_category"
            android:layout_gravity="center"
            android:textColor="#B99930"
            android:gravity="center"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/taskCategory"
            android:textColor="@android:color/black"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/lin7"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin6"
        android:layout_marginTop="20dp"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:background="@drawable/tasks_heads_background"
            android:id="@+id/task_startDate"
            android:layout_gravity="center"
            android:textColor="#B99930"
            android:gravity="center"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/start_date"
            android:textColor="@android:color/black"

            />

    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:id="@+id/lin55"
                android:weightSum="4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lin7"
                android:layout_marginTop="20dp"

                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="40dp"
                    android:background="@drawable/tasks_heads_background"
                    android:id="@+id/task_endDate"
                    android:layout_gravity="center"
                    android:textColor="#B99930"
                    android:gravity="center"/>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/end_date"
                    android:textColor="@android:color/black"

                    />

            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/lin8"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin55"
        android:layout_marginTop="20dp"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="40dp"
            android:background="@drawable/tasks_heads_background"
            android:id="@+id/task_personResp"
            android:layout_gravity="center"
            android:textColor="#B99930"
            android:gravity="center"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/responsible_person"
            android:textColor="@android:color/black"

            />

    </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editBtn"
                android:background="@drawable/gold_background"
                android:layout_marginEnd="20dp"
                android:text="تعديل المهمة"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lin8"
                android:drawableStart="@mipmap/icon"
                android:drawablePadding="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="10dp"
                app:layout_goneMarginEnd="10dp"
                />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>